<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/library"
    android:orientation="vertical"
    tools:context=".EditarActivity">

    <TextView
        android:id="@+id/tv_encabezado2"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="7dp"
        android:text="@string/editar_libro"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_id"
        android:layout_width="242dp"
        android:layout_height="43dp"
        android:layout_alignLeft="@+id/et_titulo2"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/et_titulo2"
        android:layout_marginEnd="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="#ffff"
        android:ems="10"
        android:hint="Código libro HS001"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/buscar_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_encabezado2" />

    <EditText
        android:id="@+id/et_titulo2"
        android:layout_width="351dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="9dp"
        android:background="#ffff"
        android:ems="10"
        android:hint="@string/titulo_l"
        android:inputType="text"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buscar_button" />


    <EditText
        android:id="@+id/et_autor2"
        android:layout_width="352dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:background="#ffff"
        android:ems="10"
        android:hint="@string/autor_l"
        android:inputType="number"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_titulo2" />

    <EditText
        android:id="@+id/et_area2"
        android:layout_width="352dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="#ffff"
        android:ems="10"
        android:hint="@string/area_l"
        android:inputType="text"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_autor2" />


    <EditText
        android:id="@+id/et_editorial2"
        android:layout_width="352dp"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:background="#ffff"
        android:ems="10"
        android:hint="@string/editorial_l"
        android:inputType="text"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_area2" />


    <EditText
        android:id="@+id/et_year2"
        android:layout_width="352dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:background="#ffff"
        android:ems="10"
        android:hint="@string/año_libro"
        android:inputType="number"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_editorial2" />

    <Button
        android:id="@+id/editar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginRight="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="22dp"
        android:background="#fdc943"
        android:text="@string/button"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_year2" />

    <ImageButton
        android:id="@+id/buscar_button"
        android:layout_width="67dp"
        android:layout_height="38dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/et_id"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorAccent"
        android:src="@drawable/ic_search_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_encabezado2" />


</android.support.constraint.ConstraintLayout>