<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/library"
    tools:context=".EliminarActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/eliminar_libro"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_id2"
        android:layout_width="242dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:background="#ffff"
        android:ems="10"
        android:hint="Código libro HS001"
        android:inputType="text"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/buscar_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <EditText
        android:id="@+id/et_titulo3"
        android:layout_width="351dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="38dp"
        android:background="#ffff"
        android:ems="10"
        android:hint="@string/titulo_l"
        android:inputType="text"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buscar_button2" />

    <ImageButton
        android:id="@+id/buscar_button2"
        android:layout_width="67dp"
        android:layout_height="38dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/et_id"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorAccent"
        android:src="@drawable/ic_search_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/eliminar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="232dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="21dp"
        android:background="#fdc943"
        android:text="@string/eliminar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_titulo3" />


</android.support.constraint.ConstraintLayout>